# sik-screen-worms

./: .gitignore  CMakeLists.txt  README.MD  makefile  screen-worms-client  screen-worms-server
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client_args.c  client_args.h  client_state.c  client_state.h  game_client.c  game_client.h  gui_client.c  gui_client.h  gui_messages.c  gui_messages.h  main.c  params.c  params.h
src/common/: CMakeLists.txt  crc32.c  crc32.h  err.c  err.h  list.c  list.h  messages.c  messages.h  stack.c  stack.h  utils.c  utils.h
src/common/utils/: crc32.c  list.c  list.h  parse.c  parse.h  stack.c  utils.c  utils.h
src/gui/: CMakeLists.txt  Readme.md
src/gui/gui2/: CMakeLists.txt  Makefile
src/server/: CMakeLists.txt  clients.c  clients.h  config.h  events_storage.c  events_storage.h  game.c  game.h  game_board.c  game_board.h  game_state.c  game_state.h  main.c  params.c  params.h  rand.c  rand.h  server_args.c  server_args.h
tests/: CMakeLists.txt
tests/client/: CMakeLists.txt  test_client_args.c  test_gui_messages.c  test_params.c
tests/common/: CMakeLists.txt  test_list.c  test_messages.c  test_stack.c
tests/server/: CMakeLists.txt  test_game_board.c  test_rand.c  test_server_args.c
tests/unity_framework/: CMakeLists.txt
